--- a/salalal/Views/Admin/EditUser.cshtml
+++ b/salalal/Views/Admin/EditUser.cshtml
@@ -18,7 +18,7 @@
     <div class="mb-3">
         <label class="form-label">Role</label>
         <select asp-for="Role" class="form-control">
-            <option value="Admin">Admin</option>
+            <option value="Employee">Employee</option>
             <option value="Customer">Customer</option>
         </select>
     </div>
