--- a/salalal/Views/Account/Login.cshtml
+++ b/salalal/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
         <h3 class="text-center">Login</h3>
         <form method="post" action="/Account/Login">
             <div class="mb-3">
-                <label class="form-label">Username</label>
+                <label class="form-label">Usernamee</label>
                 <input type="text" name="Username" class="form-control" placeholder="Enter username" required />
             </div>
             <div class="mb-3">
