Adding employee role and adding status to Orders

--- a/salalal/Views/Account/Profile.cshtml
+++ b/salalal/Views/Account/Profile.cshtml
@@ -30,6 +30,7 @@
                         }
                     </ul>
                     <p><strong>Total Price:</strong> $@totalPrice</p>
+                    <p><strong>@order.Status</p>
                 </div>
             }
         }
