--- a/salalal/Views/Shared/_Layout.cshtml
+++ b/salalal/Views/Shared/_Layout.cshtml
@@ -96,6 +96,17 @@
                                 </ul>
                             </li>
                         }
+                        else if (User.IsInRole("Employee"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                    Employee panel <i class="fas fa-cogs"></i>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/Employee/ManageOrders">Manage Users</a></li>
+                                </ul>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link" href="/Account/Profile">
                                 <i class="fas fa-user"></i> Profile
