--- a/salalal/Views/Home/Index.cshtml
+++ b/salalal/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿      <!-- HOME -->
 <section id="home">
     <div class="container">
-        <h1><b>dasdsdasd</h1>
-        <h1><span><b>asddasdas</b></span> dsadsa</h1>
-        <p>sdadas</p>
+        <h1><b>Dobrodosli</h1>
+        <h1><span><b>NAJBOLJENJE CENE</b></span> Ove sezone</h1>
+        <p>Sva oprema koja vam treba</p>
         <a href="/Ski/Index"> <button class="text-uppercase">dsadsdas</button></a>
     </div>
 </section>
