--- a/salalal/Views/Shared/_Layout.cshtml
+++ b/salalal/Views/Shared/_Layout.cshtml
@@ -65,7 +65,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <!-- Centriranje svih stavki u navbar-u -->
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
@@ -80,7 +81,6 @@
                             </span>
                         </a>
                     </li>
-
                     @if (User.Identity.IsAuthenticated)
                     {
                         @if (User.IsInRole("Admin"))
@@ -100,10 +100,10 @@
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                                    Employee panel <i class="fas fa-cogs"></i>
+                                    Employee Panel <i class="fas fa-cogs"></i>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/Employee/ManageOrders">Manage Users</a></li>
+                                    <li><a class="dropdown-item" href="/Employee/ManageOrders">Manage Orders</a></li>
                                 </ul>
                             </li>
                         }
@@ -112,30 +112,28 @@
                                 <i class="fas fa-user"></i> Profile
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <form method="post" action="/Account/Logout" class="d-inline">
-                                <button type="submit" class="nav-link btn btn-link text-danger p-0 border-0" style="background: none;">Logout</button>
+                        <li class="nav-item d-flex align-items-center">
+                            <!-- Centriranje Logout dugmeta -->
+                            <form method="post" action="/Account/Logout">
+                                <button type="submit" class="btn btn-outline-danger px-3 py-1 ms-2">Logout</button>
                             </form>
                         </li>
                     }
                     else
                     {
-                        <li class="nav-item">
-                            <form method="get" action="/Account/Login" class="d-inline">
-                                <button type="submit" class="nav-link btn btn-link p-0 border-0" style="background: none;">Login</button>
-                            </form>
+                        <li class="nav-item d-flex align-items-center">
+                            <!-- Centriranje Login dugmeta -->
+                            <a class="btn btn-outline-light px-3 py-1 ms-2" href="/Account/Login">Login</a>
                         </li>
                     }
-
                 </ul>
             </div>
         </div>
     </nav>
 
-        <div>
-            @RenderBody()
-        </div>
- 
+    <div>
+        @RenderBody()
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
